<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_from_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchFormActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".activities.SearchFormActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/simple_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/title_inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/game_title"
                android:imeOptions="actionDone"
                android:inputType="textShortMessage"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/platforms_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/simple_margin"
            android:minHeight="@dimen/spinner_min_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_textInputLayout" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/genres_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/simple_margin"
            android:minHeight="@dimen/spinner_min_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/platforms_spinner" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/themes_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/simple_margin"
            android:minHeight="@dimen/spinner_min_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genres_spinner" />

        <TextView
            android:id="@+id/rating_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/simple_margin"
            android:text="@string/rating_lable"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/themes_spinner" />

        <com.appyvet.materialrangebar.RangeBar
            android:id="@+id/rating_rangeBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/simple_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_lable"
            app:mrb_connectingLineColor="@color/colorAccent"
            app:mrb_pinColor="@color/colorAccent"
            app:mrb_pinMaxFont="10sp"
            app:mrb_pinTextColor="@color/primaryTextColor"
            app:mrb_rangeBarColor="#000"
            app:mrb_selectorBoundarySize="2dp"
            app:mrb_selectorColor="@color/colorAccent"
            app:mrb_selectorSize="8dp"
            app:mrb_temporaryPins="false"
            app:mrb_tickEnd="100"
            app:mrb_tickHeight="0dp"
            app:mrb_tickInterval="1"
            app:mrb_tickStart="0" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/simple_margin"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_rangeBar" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>